pkg/crates/abacus-core/src/llm/providers/snapshots/abacus_core__llm__providers__openai_compatible__tests__snapshot_openai_gpt5_off.snap
---
source: crates/abacus-core/src/llm/providers/openai_compatible.rs
assertion_line: 937
expression: snapshot_openai_fields(&body)
---
{
  "model": "gpt-5",
  "reasoning_effort": null,
  "stream": false
}
