pkg/crates/abacus-core/src/llm/providers/snapshots/abacus_core__llm__providers__openai_compatible__tests__snapshot_openai_max_xhigh_clamps_to_high.snap
---
source: crates/abacus-core/src/llm/providers/openai_compatible.rs
assertion_line: 962
expression: snapshot_openai_fields(&body)
---
{
  "model": "gpt-5",
  "reasoning_effort": "high",
  "stream": false
}
